Fix Alignment users Refers to [#114977027] - Fix Fab button to bottom-right - Remove back button - Add margin for Header title

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -514,7 +514,7 @@ md-sidenav .ripple-container {
   position: fixed;
   right: 0;
   color: white;
-  margin-top: 38%;
+  bottom: 0;
 }
 
 .fit,
@@ -826,4 +826,8 @@ md-toast.md-success-toast-theme {
   color: grey;
   padding-top: 7px;
   align-center: right;
+}
+
+.preview-color {
+   color: grey;
 }
